--- a/cicd/serverless.yml
+++ b/cicd/serverless.yml
@@ -9,7 +9,7 @@ custom:
   regions: ${file(./package.json):regions}
 
   cicd:
-    image: 'aws/codebuild/nodejs:8.11.0'
+    image: 'aws/codebuild/standard:2.0'
     owner: ${self:custom.github.owner}
     repository: ${self:custom.github.repo}
     emailNotifications: ['{{resolve:ssm:admin-email:1}}']
