--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,45 +4,45 @@
   "private": true,
   "description": "Frontend",
   "dependencies": {
-    "@graphql-codegen/typescript-resolvers": "^1.1.3",
-    "aws-amplify": "^1.1.19",
-    "aws-amplify-react": "^2.3.0",
-    "react": "^16.8.2",
-    "react-dom": "^16.8.2",
-    "react-helmet": "^5.2.0",
-    "react-scripts": "2.1.5",
+    "@graphql-codegen/typescript-resolvers": "^1.3.1",
+    "aws-amplify": "^1.1.29",
+    "aws-amplify-react": "^2.3.9",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
+    "react-helmet": "^5.2.1",
+    "react-scripts": "^3.0.1",
     "semantic-ui-css": "^2.4.1",
-    "semantic-ui-react": "^0.85.0"
+    "semantic-ui-react": "^0.87.2"
   },
   "devDependencies": {
     "@anttiviljami/serverless-stack-output": "^0.3.1",
-    "@graphql-codegen/cli": "^1.1.3",
-    "@graphql-codegen/typescript": "1.1.3",
-    "@graphql-codegen/typescript-operations": "^1.1.3",
-    "@types/jest": "^24.0.5",
-    "@types/node": "^11.9.4",
-    "@types/react": "^16.8.3",
-    "@types/react-dom": "^16.8.2",
+    "@graphql-codegen/cli": "^1.3.1",
+    "@graphql-codegen/typescript": "^1.3.1",
+    "@graphql-codegen/typescript-operations": "^1.3.1",
+    "@testing-library/react": "^8.0.1",
+    "@types/jest": "^24.0.15",
+    "@types/node": "^12.0.10",
+    "@types/react": "^16.8.22",
+    "@types/react-dom": "^16.8.4",
     "@types/react-helmet": "^5.0.8",
-    "@types/react-test-renderer": "^16.8.1",
-    "dotenv": "^6.2.0",
-    "fs-extra": "^7.0.1",
-    "jest-dom": "^3.1.2",
+    "@types/react-test-renderer": "^16.8.2",
+    "dotenv": "^8.0.0",
+    "fs-extra": "^8.0.1",
+    "jest-dom": "^3.5.0",
     "js-yaml": "^3.13.1",
     "minimist": "^1.2.0",
     "monitoring-appsync-service": "file:./../services/monitoring-appsync-service",
     "monitoring-tester-service": "file:./../services/monitoring-tester-service",
-    "react-test-renderer": "^16.8.2",
-    "react-testing-library": "^5.9.0",
+    "react-test-renderer": "^16.8.6",
     "serverless-plugin-tracing": "^2.0.0",
     "serverless-s3-remover": "^0.6.0",
     "serverless-scriptable-plugin": "1.0.1",
     "serverless-single-page-app-plugin": "file:./serverless-single-page-app-plugin",
-    "source-map-explorer": "^1.7.0",
-    "tslint": "^5.12.1",
+    "source-map-explorer": "^2.0.1",
+    "tslint": "^5.18.0",
     "tslint-config-prettier": "^1.18.0",
-    "tslint-react": "^3.6.0",
-    "typescript": "^3.3.3"
+    "tslint-react": "^4.0.0",
+    "typescript": "^3.5.2"
   },
   "scripts": {
     "analyze": "source-map-explorer",
