--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,6 +26,7 @@
     "@types/react-dom": "^16.8.4",
     "@types/react-helmet": "^5.0.8",
     "@types/react-test-renderer": "^16.8.2",
+    "@types/zen-observable": "^0.8.0",
     "dotenv": "^8.0.0",
     "fs-extra": "^8.0.1",
     "jest-dom": "^3.5.0",
