pass --frozen-lockfile to yarn install command

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -50,7 +50,7 @@ aliases:
   - &install_dependencies
     run:
       name: Install Dependencies
-      command: yarn install
+      command: yarn install --frozen-lockfile
 
   - &install_serverless_cli
     run:
