add manual trigger command

--- a/cicd/package.json
+++ b/cicd/package.json
@@ -24,6 +24,7 @@
     "remove": "serverless remove",
     "setup:circleci": "node scripts/circleci.js setup --stagingRegion $npm_package_regions_staging --prodRegion $npm_package_regions_prod",
     "remove:circleci": "node scripts/circleci.js remove",
+    "trigger:circleci": "node scripts/circleci.js trigger",
     "connectToGitHubStaging": "aws codebuild import-source-credentials --server-type GITHUB --auth-type PERSONAL_ACCESS_TOKEN --region $npm_package_regions_staging",
     "storeAdminEmailStaging": "aws ssm put-parameter --name admin-email --type String --region $npm_package_regions_staging",
     "connectToGitHubProd": "aws codebuild import-source-credentials --server-type GITHUB --auth-type PERSONAL_ACCESS_TOKEN --region $npm_package_regions_prod",
