chore: update dependencies

--- a/services/monitoring-tester-service/package.json
+++ b/services/monitoring-tester-service/package.json
@@ -7,8 +7,8 @@
     "lint": "tslint 'src/**/*.ts'",
     "test": "jest --verbose",
     "test:watch": "jest --watch",
-    "test:ci": "JEST_JUNIT_OUTPUT=../../reports/junit/${npm_package_name}-test-results.xml yarn test --runInBand --ci",
-    "test:e2e": "JEST_JUNIT_OUTPUT=../../reports/junit/${npm_package_name}-e2e-test-results.xml yarn test --runInBand --ci --config=jest.config.e2e.js",
+    "test:ci": "JEST_JUNIT_OUTPUT_DIR=../../reports/junit JEST_JUNIT_OUTPUT_NAME=${npm_package_name}-test-results.xml yarn test --runInBand --ci",
+    "test:e2e": "JEST_JUNIT_OUTPUT_DIR=../../reports/junit JEST_JUNIT_OUTPUT_NAME=${npm_package_name}-e2e-test-results.xml yarn test --runInBand --ci --config=jest.config.e2e.js",
     "coverage": "yarn test --coverage",
     "deploy": "serverless deploy",
     "remove": "serverless remove",
@@ -17,37 +17,37 @@
     "print:name": "echo ${npm_package_name}"
   },
   "dependencies": {
-    "aws-amplify": "^1.1.29",
-    "aws-sdk": "^2.480.0",
+    "aws-amplify": "^1.2.4",
+    "aws-sdk": "^2.568.0",
     "axios": "^0.19.0"
   },
   "devDependencies": {
     "@anttiviljami/serverless-stack-output": "^0.3.1",
-    "@types/aws-lambda": "^8.10.27",
-    "@types/chai": "^4.1.7",
-    "@types/jest": "^24.0.15",
+    "@types/aws-lambda": "^8.10.35",
+    "@types/chai": "^4.2.4",
+    "@types/jest": "^24.0.22",
     "@types/mockdate": "^2.0.0",
-    "@types/node": "^12.0.10",
-    "aws-testing-library": "^1.0.6",
+    "@types/node": "^12.12.7",
+    "aws-testing-library": "^1.0.9",
     "chai": "^4.2.0",
-    "dotenv": "^8.0.0",
-    "fs-extra": "^8.0.1",
-    "jest": "24.7.1",
-    "mockdate": "2.0.2",
+    "dotenv": "^8.2.0",
+    "fs-extra": "^8.1.0",
+    "jest": "24.9.0",
+    "mockdate": "2.0.5",
     "monitoring-appsync-service": "file:./../monitoring-appsync-service",
     "monitoring-common": "file:./../monitoring-common",
-    "serverless-iam-roles-per-function": "^1.0.4",
+    "serverless-iam-roles-per-function": "^2.0.2",
     "serverless-plugin-tracing": "^2.0.0",
-    "serverless-pseudo-parameters": "^2.4.0",
-    "serverless-scriptable-plugin": "1.0.1",
-    "serverless-step-functions": "^1.13.0",
+    "serverless-pseudo-parameters": "^2.5.0",
+    "serverless-scriptable-plugin": "1.0.4",
+    "serverless-step-functions": "^2.11.0",
     "serverless-webpack": "^5.2.0",
-    "ts-jest": "^23.10.5",
-    "ts-loader": "^5.3.3",
-    "tslint": "^5.18.0",
+    "ts-jest": "^24.1.0",
+    "ts-loader": "^6.2.1",
+    "tslint": "^5.20.1",
     "tslint-config-prettier": "^1.18.0",
-    "typescript": "^3.5.2",
-    "webpack": "^4.35.0"
+    "typescript": "^3.7.2",
+    "webpack": "^4.41.2"
   },
   "author": "Erez Rokah",
   "license": "MIT"
