--- a/cicd/package.json
+++ b/cicd/package.json
@@ -7,17 +7,17 @@
   "author": "Erez Rokah",
   "license": "MIT",
   "devDependencies": {
-    "aws-sdk": "^2.480.0",
+    "aws-sdk": "^2.568.0",
     "axios": "^0.19.0",
-    "colors": "^1.3.3",
-    "eslint": "^6.0.0",
-    "eslint-config-prettier": "^5.0.0",
-    "eslint-plugin-jest": "^22.7.1",
-    "fs-extra": "^8.0.1",
-    "jest": "23.6.0",
+    "colors": "^1.4.0",
+    "eslint": "^6.6.0",
+    "eslint-config-prettier": "^6.5.0",
+    "eslint-plugin-jest": "^23.0.3",
+    "fs-extra": "^8.1.0",
+    "jest": "24.9.0",
     "js-yaml": "^3.13.1",
     "serverless-plugin-cicd": "file:./serverless-plugin-cicd",
-    "yargs": "^13.2.4"
+    "yargs": "^14.2.0"
   },
   "scripts": {
     "setup": "serverless deploy",
@@ -32,7 +32,7 @@
     "lint": "eslint scripts/**/*.js serverless-plugin-cicd/**/*.js",
     "test": "jest --verbose",
     "test:watch": "jest --watch",
-    "test:ci": "JEST_JUNIT_OUTPUT=../../reports/junit/${npm_package_name}-test-results.xml yarn test --runInBand --ci",
+    "test:ci": "JEST_JUNIT_OUTPUT_DIR=../../reports/junit JEST_JUNIT_OUTPUT_NAME=${npm_package_name}-test-results.xml yarn test --runInBand --ci",
     "coverage": "yarn test --coverage",
     "prettier": "prettier --write 'scripts/**/*.js' 'serverless-plugin-cicd/*.js' 'jest.config.js'",
     "prettier:ci": "prettier --list-different 'scripts/**/*.js' 'serverless-plugin-cicd/*.js' 'jest.config.js'",
