--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,46 +4,47 @@
   "private": true,
   "description": "Frontend",
   "dependencies": {
-    "@graphql-codegen/typescript-resolvers": "^1.3.1",
-    "aws-amplify": "^1.1.29",
-    "aws-amplify-react": "^2.3.9",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
+    "@graphql-codegen/typescript-resolvers": "^1.8.3",
+    "aws-amplify": "^1.2.4",
+    "aws-amplify-react": "^2.5.4",
+    "react": "^16.11.0",
+    "react-dom": "^16.11.0",
     "react-helmet": "^5.2.1",
-    "react-scripts": "^3.0.1",
+    "react-scripts": "^3.2.0",
     "semantic-ui-css": "^2.4.1",
-    "semantic-ui-react": "^0.87.2"
+    "semantic-ui-react": "^0.88.1"
   },
   "devDependencies": {
     "@anttiviljami/serverless-stack-output": "^0.3.1",
-    "@graphql-codegen/cli": "^1.3.1",
-    "@graphql-codegen/typescript": "^1.3.1",
-    "@graphql-codegen/typescript-operations": "^1.3.1",
-    "@testing-library/react": "^8.0.1",
-    "@types/jest": "^24.0.15",
-    "@types/node": "^12.0.10",
-    "@types/react": "^16.8.22",
-    "@types/react-dom": "^16.8.4",
-    "@types/react-helmet": "^5.0.8",
-    "@types/react-test-renderer": "^16.8.2",
+    "@graphql-codegen/cli": "^1.8.3",
+    "@graphql-codegen/typescript": "^1.8.3",
+    "@graphql-codegen/typescript-operations": "^1.8.3",
+    "@testing-library/jest-dom": "^4.2.3",
+    "@testing-library/react": "^9.3.2",
+    "@types/jest": "^24.0.22",
+    "@types/node": "^12.12.7",
+    "@types/react": "^16.9.11",
+    "@types/react-dom": "^16.9.4",
+    "@types/react-helmet": "^5.0.14",
+    "@types/react-test-renderer": "^16.9.1",
     "@types/zen-observable": "^0.8.0",
-    "dotenv": "^8.0.0",
-    "fs-extra": "^8.0.1",
-    "jest-dom": "^3.5.0",
+    "dotenv": "^8.2.0",
+    "fs-extra": "^8.1.0",
+    "jest-dom": "^4.0.0",
     "js-yaml": "^3.13.1",
     "minimist": "^1.2.0",
     "monitoring-appsync-service": "file:./../services/monitoring-appsync-service",
     "monitoring-tester-service": "file:./../services/monitoring-tester-service",
-    "react-test-renderer": "^16.8.6",
+    "react-test-renderer": "^16.11.0",
     "serverless-plugin-tracing": "^2.0.0",
     "serverless-s3-remover": "^0.6.0",
-    "serverless-scriptable-plugin": "1.0.1",
+    "serverless-scriptable-plugin": "1.0.4",
     "serverless-single-page-app-plugin": "file:./serverless-single-page-app-plugin",
-    "source-map-explorer": "^2.0.1",
-    "tslint": "^5.18.0",
+    "source-map-explorer": "^2.1.0",
+    "tslint": "^5.20.1",
     "tslint-config-prettier": "^1.18.0",
-    "tslint-react": "^4.0.0",
-    "typescript": "^3.5.2"
+    "tslint-react": "^4.1.0",
+    "typescript": "^3.7.2"
   },
   "scripts": {
     "analyze": "source-map-explorer",
@@ -51,7 +52,7 @@
     "build": "react-scripts build && node postBuild.js",
     "test": "TZ=GMT CI=true react-scripts test --verbose",
     "test:watch": "TZ=GMT react-scripts test",
-    "test:ci": "TZ=GMT CI=true JEST_JUNIT_OUTPUT=../reports/junit/${npm_package_name}-test-results.xml yarn test --runInBand --ci --reporters=jest-junit --reporters=default",
+    "test:ci": "TZ=GMT CI=true JEST_JUNIT_OUTPUT_DIR=../reports/junit JEST_JUNIT_OUTPUT_NAME=${npm_package_name}-test-results.xml yarn test --runInBand --ci --reporters=jest-junit --reporters=default",
     "eject": "react-scripts eject",
     "lint": "tslint 'src/**/*.ts?(x)'",
     "coverage": "TZ=GMT yarn test --coverage",
