--- a/package.json
+++ b/package.json
@@ -21,9 +21,9 @@
     "print:name": "lerna run print:name"
   },
   "devDependencies": {
-    "jest-junit": "^6.4.0",
-    "lerna": "^3.15.0",
-    "prettier": "^1.18.2"
+    "jest-junit": "^9.0.0",
+    "lerna": "3.15.0",
+    "prettier": "^1.19.1"
   },
   "author": "Erez Rokah",
   "license": "MIT",
