--- a/cicd/package.json
+++ b/cicd/package.json
@@ -7,14 +7,14 @@
   "author": "Erez Rokah",
   "license": "MIT",
   "devDependencies": {
-    "aws-sdk": "^2.568.0",
+    "aws-sdk": "^2.706.0",
     "axios": "^0.19.0",
     "colors": "^1.4.0",
-    "eslint": "^7.0.0",
+    "eslint": "^7.3.1",
     "eslint-config-prettier": "^6.5.0",
-    "eslint-plugin-jest": "^23.0.3",
+    "eslint-plugin-jest": "^23.17.1",
     "fs-extra": "^9.0.0",
-    "jest": "24.9.0",
+    "jest": "^26.1.0",
     "js-yaml": "^3.13.1",
     "serverless-plugin-cicd": "file:./serverless-plugin-cicd",
     "yargs": "^15.0.0"
