--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,26 +4,26 @@
   "private": true,
   "description": "Frontend",
   "dependencies": {
-    "@graphql-codegen/typescript-resolvers": "^1.8.3",
-    "aws-amplify": "^2.0.0",
-    "aws-amplify-react": "^4.0.0",
+    "@graphql-codegen/typescript-resolvers": "^1.15.4",
+    "aws-amplify": "^3.0.18",
+    "aws-amplify-react": "^4.1.17",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
     "react-helmet": "^6.0.0",
-    "react-scripts": "^3.2.0",
+    "react-scripts": "^3.4.1",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^0.88.1"
   },
   "devDependencies": {
     "@anttiviljami/serverless-stack-output": "^0.3.1",
-    "@graphql-codegen/cli": "^1.8.3",
-    "@graphql-codegen/typescript": "^1.8.3",
-    "@graphql-codegen/typescript-operations": "^1.8.3",
-    "@testing-library/jest-dom": "^5.0.0",
-    "@testing-library/react": "^10.0.0",
-    "@types/jest": "^25.0.0",
-    "@types/node": "^12.12.7",
-    "@types/react": "^16.9.11",
+    "@graphql-codegen/cli": "^1.15.4",
+    "@graphql-codegen/typescript": "^1.15.4",
+    "@graphql-codegen/typescript-operations": "^1.15.4",
+    "@testing-library/jest-dom": "^5.11.0",
+    "@testing-library/react": "^10.4.3",
+    "@types/jest": "^26.0.3",
+    "@types/node": "^14.0.14",
+    "@types/react": "^16.9.41",
     "@types/react-dom": "^16.9.4",
     "@types/react-helmet": "^6.0.0",
     "@types/react-test-renderer": "^16.9.1",
@@ -32,10 +32,13 @@
     "fs-extra": "^9.0.0",
     "jest-dom": "^4.0.0",
     "jest-environment-jsdom-sixteen": "^1.0.3",
+    "jest-junit": "^11.0.1",
     "js-yaml": "^3.13.1",
+    "lerna": "3.22.1",
     "minimist": "^1.2.0",
     "monitoring-appsync-service": "file:./../services/monitoring-appsync-service",
     "monitoring-tester-service": "file:./../services/monitoring-tester-service",
+    "prettier": "^2.0.5",
     "react-test-renderer": "^16.11.0",
     "serverless-plugin-tracing": "^2.0.0",
     "serverless-s3-remover": "^0.6.0",
