--- a/package.json
+++ b/package.json
@@ -21,11 +21,14 @@
     "print:name": "lerna run print:name"
   },
   "devDependencies": {
-    "jest-junit": "^10.0.0",
+    "jest-junit": "^11.0.1",
     "lerna": "3.15.0",
-    "prettier": "^1.19.1"
+    "prettier": "^2.0.5"
   },
   "author": "Erez Rokah",
   "license": "MIT",
-  "name": "serverless-monitoring-app"
+  "name": "serverless-monitoring-app",
+  "resolutions": {
+    "jest": "24.9.0"
+  }
 }
