--- a/services/monitoring-tester-service/package.json
+++ b/services/monitoring-tester-service/package.json
@@ -17,22 +17,22 @@
     "print:name": "echo ${npm_package_name}"
   },
   "dependencies": {
-    "aws-amplify": "^2.0.0",
-    "aws-sdk": "^2.568.0",
+    "aws-amplify": "^3.0.18",
+    "aws-sdk": "^2.706.0",
     "axios": "^0.19.0"
   },
   "devDependencies": {
     "@anttiviljami/serverless-stack-output": "^0.3.1",
-    "@types/aws-lambda": "^8.10.35",
+    "@types/aws-lambda": "^8.10.57",
     "@types/chai": "^4.2.4",
-    "@types/jest": "^25.0.0",
+    "@types/jest": "^26.0.3",
     "@types/mockdate": "^2.0.0",
-    "@types/node": "^12.12.7",
+    "@types/node": "^14.0.14",
     "aws-testing-library": "^1.0.9",
     "chai": "^4.2.0",
     "dotenv": "^8.2.0",
     "fs-extra": "^9.0.0",
-    "jest": "24.9.0",
+    "jest": "^26.1.0",
     "mockdate": "3.0.2",
     "monitoring-appsync-service": "file:./../monitoring-appsync-service",
     "monitoring-common": "file:./../monitoring-common",
@@ -40,9 +40,9 @@
     "serverless-plugin-tracing": "^2.0.0",
     "serverless-pseudo-parameters": "^2.5.0",
     "serverless-scriptable-plugin": "1.0.5",
-    "serverless-step-functions": "^2.11.0",
+    "serverless-step-functions": "^2.21.1",
     "serverless-webpack": "^5.2.0",
-    "ts-jest": "^26.0.0",
+    "ts-jest": "^26.1.1",
     "ts-loader": "^7.0.0",
     "tslint": "^6.0.0",
     "tslint-config-prettier": "^1.18.0",
