--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -38,14 +38,14 @@ aliases:
         - 'services/monitoring-appsync-service/node_modules'
         - 'services/monitoring-common/node_modules'
         - 'services/monitoring-tester-service/node_modules'
-      key: dependencies-cache-{{ checksum "yarn.lock" }}
+      key: dependencies-cache-v2-{{ checksum "yarn.lock" }}
 
   - &restore_cache
     restore_cache:
       keys:
-        - dependencies-cache-{{ checksum "yarn.lock" }}
+        - dependencies-cache-v2-{{ checksum "yarn.lock" }}
         # fallback to using the latest cache if no exact match is found
-        - dependencies-cache
+        - dependencies-cache-v2
 
   - &install_dependencies
     run:
